--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,8 +103,8 @@ dependencies {
     })
 
     // 系统jar
-    compile 'com.android.support:appcompat-v7:25.+'
-    compile 'com.android.support:recyclerview-v7:25.+'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     // 引入百度定位所需jar包
     compile files('libs/BaiduLBS_Android.jar')
@@ -155,5 +155,8 @@ dependencies {
     // 图标编辑
     compile 'com.hzw.graffiti:graffiti:4.3.1'
     compile 'com.forward.androids:androids:1.1.8'
+    // 上拉加载、下拉刷新
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-7'
+
     testCompile 'junit:junit:4.12'
 }
