--- a/build.gradle
+++ b/build.gradle
@@ -4,23 +4,22 @@ buildscript {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
-        maven { url"https://maven.google.com" }
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        //tinker-support插件
-        classpath "com.tencent.bugly:tinker-support:1.1.2"
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+
         maven { url "https://jitpack.io" }
-        maven { url"https://maven.google.com" }
+        google()
     }
 }
 
