--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
-        google()
+        maven { url 'https://maven.google.com/' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
@@ -19,7 +19,7 @@ allprojects {
         jcenter()
 
         maven { url "https://jitpack.io" }
-        google()
+        maven { url 'https://maven.google.com/' }
     }
 }
 
