--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile project(':graffiti')
+
     // 系统jar
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
@@ -156,8 +158,8 @@ dependencies {
     compile 'com.github.vipulasri:timelineview:1.0.6'
     compile 'com.vivian.widgets:TimeLineItemDecoration:1.3'
     // 图标编辑
-    compile 'com.hzw.graffiti:graffiti:4.3.1'
-    compile 'com.forward.androids:androids:1.1.8'
+    //compile 'com.hzw.graffiti:graffiti:4.3.1'
+    //compile 'com.forward.androids:androids:1.1.8'
     // 上拉加载、下拉刷新
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-7'
     // 右滑关闭
