--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,10 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+MIN_SDK_VERSION=17
+TARGET_SDK_VERSION=25
+
+VERSION_NAME=4.3.1
+VERSION_CODE=9
+BUILD_TOOLS_VERSION=25.0.2
+COMPILE_SDK_VERSION=25
