--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         android:name="com.zj.expressway.application.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/logo"
+        android:hardwareAccelerated="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Anim_fade">
